--- a/_site.yml
+++ b/_site.yml
@@ -19,6 +19,7 @@ collections:
   posts:
     categories: true
     categories_metadata: true
+    custom: _custom.html
 output:
   distill::distill_article:
     css: styles.css
