--- a/_site.yml
+++ b/_site.yml
@@ -6,23 +6,29 @@ output_dir: "docs"
 base_url: yjunechoe.github.io
 navbar:
   right:
-    - text: "Blog Posts"
+    - text: "Home"
       href: index.html
-    - text: "Presentations"
-      href: presentations.html
     - text: "Visualizations"
       href: visualizations.html
+    - text: "Presentations"
+      href: presentations.html
+    - text: "Resources"
+      href: resources.html
     - text: "About"
       href: about.html
     - icon: fa fa-twitter
       href: https://twitter.com/yjunechoe
     - icon: fa fa-github
       href: https://github.com/yjunechoe
+    - icon: fa fa-rss
+      href: index.xml
   search: true
 collections:
   posts:
     categories: true
     categories_metadata: true
+    authors_metadata: false
+    share: [twitter]
     custom: _custom.html
 output:
   distill::distill_article:
