--- a/_site.yml
+++ b/_site.yml
@@ -3,7 +3,6 @@ title: "June Choe"
 description: |
   Personal Blog
 output_dir: "docs"
-creative_commons: CC BY
 base_url: https://yjunechoe.github.io
 twitter:
   site: "@yjunechoe"
@@ -13,10 +12,18 @@ navbar:
       href: index.html
     - text: "Research"
       href: research.html
-    - text: "Resources"
-      href: resources.html
     - text: "About"
       href: about.html
+    - text: "Misc."
+      menu:
+        - text: "News"
+          href: "news.html"
+        - text: "---"
+        - text: "Resources"
+          href: resources.html
+        - text: "---"
+        - text: "Data Visualization"
+          href: "visualizations.html"
     - icon: fa fa-twitter
       href: https://twitter.com/yjunechoe
     - icon: fa fa-github
@@ -31,6 +38,7 @@ collections:
     categories: true
     categories_metadata: true
     authors_metadata: false
+    citations: false
     share: [twitter]
     custom: _custom.html
 output:
