--- a/_site.yml
+++ b/_site.yml
@@ -17,7 +17,7 @@ navbar:
     - text: "Misc."
       menu:
         - text: "News"
-          href: "news.html"
+          href: news.html
         - text: "---"
         - text: "Resources"
           href: resources.html
