footer update and remove data vis page

--- a/_site.yml
+++ b/_site.yml
@@ -21,9 +21,9 @@ navbar:
         - text: "---"
         - text: "Resources"
           href: resources.html
-        - text: "---"
-        - text: "Data Visualizations"
-          href: "visualizations.html"
+        # - text: "---"
+        # - text: "Data Visualizations"
+        #   href: visualizations.html
     - icon: fa fa-twitter
       href: https://twitter.com/yjunechoe
     - icon: fa fa-github
