--- a/_site.yml
+++ b/_site.yml
@@ -15,7 +15,7 @@ navbar:
     - text: "Research"
       href: research.html
     - text: "CV"
-    - href: static/cv.html
+      href: static/cv.html
     - text: "News"
       href: news.html
     - text: "Misc."
