--- a/_site.yml
+++ b/_site.yml
@@ -14,8 +14,8 @@ navbar:
       href: blog.html
     - text: "Research"
       href: research.html
-    # - text: "CV"
-    #   href: static/cv.html
+    - text: "CV"
+      href: static/cv.pdf
     - text: "News"
       href: news.html
     - text: "Misc."
